bin_PROGRAMS=client

client_SOURCES=\
    BomberSFML.cpp \
    ClosingEventHandler.cpp \
    ClosingEventHandler.h \
    EventHandler.cpp \
    EventHandler.h \
    MoveRectEventHandler.cpp \
    MoveRectEventHandler.h \
    Window.cpp \
    Window.h
    
AM_CPPFLAGS=$(SFML_CFLAGS)
client_LDADD=$(SFML_LIBS)
